# xyz_canvas

./: .gitignore  MANIFEST.in  README.md  demo.py  demo_V1.0.0_test.py  demo_V1.1.0_minimal.py  demo_V1.1.0_with_customisation.py  demo_minimal.py  demo_with_customisation.py  pyproject.toml
dev/xyz_canvas/: gui.py
xyz_canvas/: builder.py  canvas.py  gui.py  objects.py  xyz_canvas.py
