[project]
name = "xyz_canvas"
version = "1.0.0"
license = "MIT"

authors = [
  { name="G1OJS", email="g1ojs@yahoo.com" },
]
description = "Clickable 3D geometry canvas using matplotlib.pyplot"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "matplotlib"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/G1OJS/Python_3D_GUI"
Issues = "https://github.com/G1OJS/Python_3D_GUI/issues"

[tool.setuptools]
packages = ["Python_3D_GUI"]
license-files = ["LICENSE"]
